# dough

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  prettify.rs  ramen.rs  utils.rs
src/commands/: build.rs  mod.rs  new.rs
src/projects/: mod.rs
templates/code/: 1.md  2.md  3.md  style.yml
templates/default/: 1.md  2.md  3.md  4.md  5.md  6.md  style.yml  template.md
templates/gtest/: 2.md  3.md  4.md  style.yml
templates/light/: 1.md  style.yml
