[package]
name = "dough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "dough"
path = "src/main.rs"

[dependencies]
clap = "2.33"
colored = "2.0.0"
markdown = "1.0.0-alpha.14"
paris = "1.5.15"
termion = "2.0.3"
regex = "1"
